runtime/grammars/sources/tsq/test/corpus/test_query_errors_on_invalid_symbols.txt
================================================================================
clas
================================================================================

(clas)

--------------------------------------------------------------------------------

(query
  (pattern
    pattern: (named_node
      (node_name))))

================================================================================
arrayyyyy
================================================================================

(if_statement (arrayyyyy))

--------------------------------------------------------------------------------

(query
  (pattern
    pattern: (named_node
      (node_name)
      (child
        pattern: (named_node
          (node_name))))))

================================================================================
identifier identifier
================================================================================

(identifier (identifier))

--------------------------------------------------------------------------------

(query
  (pattern
    pattern: (named_node
      (node_name)
      (child
        pattern: (named_node
          (node_name))))))
